Changed Inquiry to Enquiry

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ KoalaBanden/src/Business/Case.java
 KoalaBanden/src/Business/Case.java
 KoalaBanden/src/Business/Case.java
 KoalaBanden/src/Business/CaseOpening.java
+Koalabanden/src/Business/SystemAdministrator.java
