--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ KoalaBanden/src/Business/Case.java
 KoalaBanden/src/Business/Case.java
 KoalaBanden/src/Business/CaseOpening.java
 Koalabanden/src/Business/SystemAdministrator.java
+KoalaBanden/src/Business/SystemAdministrator.java
