--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ KoalaBanden/src/Business/Case.java
 KoalaBanden/src/Business/CaseOpening.java
 Koalabanden/src/Business/SystemAdministrator.java
 KoalaBanden/src/Business/SystemAdministrator.java
+/KoalaBanden/nbproject/private/
