--- a/KoalaBanden/nbproject/private/private.properties
+++ b/KoalaBanden/nbproject/private/private.properties
@@ -1,1 +1,2 @@
-user.properties.file=/Users/viktorianadarajah/Library/Application Support/NetBeans/8.2/build.properties
+file.reference.jfoenix-1.10.0.jar=C:\\Users\\finch\\OneDrive\\Dokumenter\\NetBeansProjects\\KoalaBanden\\.gitignore
+user.properties.file=C:\\Users\\finch\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
