--- a/KoalaBanden/nbproject/private/private.properties
+++ b/KoalaBanden/nbproject/private/private.properties
@@ -1,2 +1,1 @@
-file.reference.jfoenix-1.10.0.jar=C:\\Users\\finch\\OneDrive\\Dokumenter\\NetBeansProjects\\KoalaBanden\\.gitignore
-user.properties.file=C:\\Users\\finch\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\trium\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
