--- a/KoalaBanden/nbproject/project.properties
+++ b/KoalaBanden/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/KoalaBanden.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jfoenix-1.10.0.jar=C:\\Users\\trium\\Downloads\\jfoenix-1.10.0.jar
+file.reference.jfoenix-8.0.1.jar=C:\\Users\\trium\\Downloads\\jfoenix-8.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jfoenix-1.10.0.jar}
+    ${file.reference.jfoenix-8.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=koalabanden.KoalaBanden
+main.class=GUI.GUIFacade
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
