--- a/KoalaBanden/nbproject/project.properties
+++ b/KoalaBanden/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/KoalaBanden.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jfoenix-8.0.1.jar=C:\\Users\\trium\\Downloads\\jfoenix-8.0.1.jar
+file.reference.jfoenix-8.0.1.jar-1=/Users/Jonas/Desktop/jfoenix-8.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jfoenix-8.0.1.jar}
+    ${file.reference.jfoenix-8.0.1.jar}:\
+    ${file.reference.jfoenix-8.0.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
