--- a/KoalaBanden/nbproject/project.properties
+++ b/KoalaBanden/nbproject/project.properties
@@ -30,12 +30,14 @@ excludes=
 file.reference.jfoenix-8.0.1.jar=C:\\Users\\trium\\Downloads\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-1=/Users/Jonas/Desktop/jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-2=C:\\Users\\trium\\Downloads\\jfoenix-8.0.1.jar
+file.reference.jfoenix-8.0.1.jar-3=C:\\Users\\trium\\Downloads\\jfoenix-8.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.jfoenix-8.0.1.jar-1}:\
-    ${file.reference.jfoenix-8.0.1.jar-2}
+    ${file.reference.jfoenix-8.0.1.jar-2}:\
+    ${file.reference.jfoenix-8.0.1.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
