--- a/KoalaBanden/nbproject/private/private.properties
+++ b/KoalaBanden/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 file.reference.jfoenix-8.0.1.jar=/Users/Jonas/Desktop/jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-1=/Users/Jonas/Desktop/jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-2=/Users/Jonas/Desktop/jfoenix-8.0.1.jar
-user.properties.file=C:\\Users\\finch\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/Jonas/Library/Application Support/NetBeans/8.2/build.properties
