--- a/KoalaBanden/nbproject/private/private.properties
+++ b/KoalaBanden/nbproject/private/private.properties
@@ -2,4 +2,5 @@ file.reference.jfoenix-8.0.1.jar=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-1=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-2=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-3=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
+file.reference.jfoenix-8.0.1.jar-4=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
 user.properties.file=/Users/Antonio/Library/Application Support/NetBeans/8.2/build.properties
