Added last tab in caseOpening

--- a/KoalaBanden/nbproject/private/private.properties
+++ b/KoalaBanden/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 file.reference.jfoenix-8.0.1.jar=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
-file.reference.jfoenix-8.0.1.jar-1=/Users/Jonas/Desktop/jfoenix-8.0.1.jar
+file.reference.jfoenix-8.0.1.jar-1=/Users/Jonas/Desktop/Filer Universitet/Projekt 2. Semester/jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-2=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-3=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-4=C:\\Users\\finch\\Downloads\\jfoenix-8.0.1.jar
