--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ KoalaBanden/src/Business/SystemAdministrator.java
 /KoalaBanden/dist/
 *.properties
 KoalaBanden/nbproject/private/private.properties
+*.properties
