--- a/KoalaBanden/nbproject/project.properties
+++ b/KoalaBanden/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jfoenix-8.0.1.jar=src\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-1=/Users/Jonas/Desktop/jfoenix-8.0.1.jar
+file.reference.postgresql-42.2.1.jar=src/postgresql-42.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jfoenix-8.0.1.jar-1}:\
-    ${file.reference.jfoenix-8.0.1.jar}
+    ${file.reference.jfoenix-8.0.1.jar}:\
+    ${file.reference.postgresql-42.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
