Refactor IDatabase to return interface types
Added AccessLevel enum to represent access levels for users. Refactored
login methods for users. Added functions to change scenes.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ KoalaBanden/src/Business/SystemAdministrator.java
 *.properties
 KoalaBanden/nbproject/private/private.properties
 *.properties
+.idea
+out
