--- a/KoalaBanden/nbproject/private/private.properties
+++ b/KoalaBanden/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 file.reference.jfoenix-8.0.1.jar-1=/Users/Antonio/Downloads/jfoenix-8.0.1.jar
-user.properties.file=/Users/Jonas/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\finch\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
